overflow fixed

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -124,7 +124,7 @@ body{
     padding: 2rem;
     font-size: 1.5rem;
     line-height: 2.15rem;
-    background-color: rgba(255,255,255,.5);
+    background-color: rgba(255,255,255,.7);
 }
 
 .blue-btn{
@@ -160,7 +160,7 @@ body{
     border-left: 8px solid $blue;
 }
 .section-title{
-    font-size: 2.57rem;
+    font-size: 2.25rem;
 }
 .section-subtitle{
     background-color: $blue;
